--- a/old-project/package.json
+++ b/old-project/package.json
@@ -6,13 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
     "express": "~4.16.1",
     "formidable": "^1.2.2",
     "keyv": "^4.0.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "ping": "^0.2.3"
   }
 }
