--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "formidable": "^1.2.2",
-    "keyv": "^4.0.1",
     "http-errors": "~1.6.3",
+    "keyv": "^4.0.1",
     "morgan": "~1.9.1"
   }
 }
