--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-status-monitor": "^1.3.3",
     "formidable": "^1.2.2",
     "http-errors": "~1.6.3",
     "keyv": "^4.0.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pm2": "^4.4.1"
   }
 }
