--- a/package.json
+++ b/package.json
@@ -8,16 +8,25 @@
   "dependencies": {
     "@keyv/sqlite": "^2.0.2",
     "colors": "^1.4.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "express-status-monitor": "^1.3.3",
+    "express-validator": "^6.9.2",
     "formidable": "^1.2.2",
     "http-errors": "~1.6.3",
     "keyv": "^4.0.1",
+    "memory": "0.0.3",
     "mime-types": "^2.1.27",
     "morgan": "~1.9.1",
-    "pm2": "^4.4.1"
+    "mysql": "^2.18.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "pm2": "^4.4.1",
+    "session-memory-store": "^1.0.0"
   }
 }
