--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@keyv/sqlite": "^2.0.2",
     "colors": "^1.4.0",
     "connect-flash": "^0.1.1",
+    "connect-mysql": "^4.0.0",
     "cookie-parser": "~1.4.4",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
